tests/baselines/reference/decoratorMetadataWithImportDeclarationNameCollision3(strict=true).errors.txt
service.ts(2,24): error TS7006: Parameter 'target' implicitly has an 'any' type.


==== service.ts (1 errors) ====
    import db = require('./db');
    function someDecorator(target) {
                           ~~~~~~
!!! error TS7006: Parameter 'target' implicitly has an 'any' type.
        return target;
    }
    @someDecorator
    class MyClass {
        db: db.db;
    
        constructor(db: db.db) { // collision with namespace of external module db
            this.db = db;
            this.db.doSomething();
        }
    }
    export {MyClass};
    
==== db.ts (0 errors) ====
    export class db {
        public doSomething() {
        }
    }
    